testsuite/tests/properties/invalid_dynvar/use_unbound.lkt
import common

class Example: BaseNode implements TokenNode {
    fun get_int_impl(): Int = my_var
}
